Bug 163145 - With Skia, lines of transparent-area shapes disappear during animation
Summary: With Skia, lines of transparent-area shapes disappear during animation
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.3 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2024-09-25 10:41 UTC by Mike Kaganski
Modified: 2024-09-26 12:46 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
A sample animation (5.33 KB, application/vnd.oasis.opendocument.presentation)
2024-09-25 10:41 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-09-25 10:41:38 UTC
Created attachment 196675 [details]
A sample animation

The presentation has a single slide with three objects; the one below the two others (i.e., on the background: the circle) has a fade-out animation. The two rectangles atop of the circle are different by the fill: in the upper one, the fill is 50% transparent, and in the lower one, it's 100% transparent.

Running the presentation using Skia (both SW and Vulkan), during the animation:

1. The line of the fully-transparent-area rectangle (the lower one) disappears over the circle;
2. The line of the partially-transparent rectangle (the upper one) is cut off by half;
3. The circle is not visible through the semi-transparent area of the upper rectangle.

With Skia disabled, it works as expected.

This is a regression from commit 6f224a17dbf635319503a81ce4038b1ae2ad6de0 (make vclcanvas try directly VCL for drawing stroked polygon (tdf#136933), 29-09-2020).
Comment 1 Commit Notification 2024-09-25 16:37:25 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/12e08b3cba0e75f1bd3a42f30e4830d723b24ece

tdf#163145: revert commit 6f224a17dbf635319503a81ce4038b1ae2ad6de0

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Buovjaga 2024-09-25 17:29:33 UTC
I confirm that the issue from bug 136933 is not reproducible after 12e08b3cba0e75f1bd3a42f30e4830d723b24ece. Tested with gtk3 and with and without DISABLE_SYSTEM_DEPENDENT_PRIMITIVE_RENDERER=1 doing multiple runs of the slideshow.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 12e08b3cba0e75f1bd3a42f30e4830d723b24ece
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Comment 3 Commit Notification 2024-09-25 19:47:25 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/b37ae3985b8ed30034be42448c862117a98dba61

tdf#163145: revert commit 6f224a17dbf635319503a81ce4038b1ae2ad6de0

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-09-25 19:47:28 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/f3e221388e10826aaac6d31631f81709951aae2a

tdf#163145: revert commit 6f224a17dbf635319503a81ce4038b1ae2ad6de0

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Mike Kaganski 2024-09-26 05:49:14 UTC
The semi-transparent area of the upper square is still opaque during animation after the fix (item 3). This must be a separate bug.