tdf#163145: revert commit 6f224a17dbf635319503a81ce4038b1ae2ad6de0

I can't reproduce the problem from tdf#136933 anymore (using kf5
and qt5), while it's reproducible using v.7.0 bibisect repo with
qt5. I conclude, that the problem got resolved in the meanwhile.
So it seems to make sense to just revert the problematic commit.
The incorrect line drawing still may need to be fixed eventually.

There seem to be no way to test SlideImpl::getCurrentSlideBitmap,
which eventually calls CanvasHelper::strokePolyPolygon. So this
change has no unit test, unfortunately.

Change-Id: I1d82b6f734a4f69d93c9d61732f55ef8158cfbe6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173933
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 12e08b3cba0e75f1bd3a42f30e4830d723b24ece)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173909
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>